--- a/style.css
+++ b/style.css
@@ -3,9 +3,14 @@
     margin: 50px;
 }
 
-#typography {
+body {
+    background: #444 ;
+    color: #ffffff;
+}
+
+.typography {
     text-align: center;
-    color: black;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.1em;
     margin: auto;
@@ -14,15 +19,18 @@
 
 .container {
     display: grid;
-    width: 100vw;
+    width: 80vw;
+    height: 100vw;
     margin: auto;
     grid-template-columns: 50vw 50vw;
-    grid-template-rows: 60vw 60vw 60vw;
-    grid-template-areas:
+    grid-template-rows: 60vw 50vw 60vw;
+    grid-template-areas: 
     "top top"
     "middleLeft middleRight"
-    "bottom bottom"
-    ;
+    "bottom bottom";
+    border: 2px solid black;
+    justify-content: center;
+    padding: 10%;
 
 }
 
@@ -30,7 +38,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    border: 3px solid blue;
+    padding: 15px;
 }
 
 #one {
