feat: created separate style sheets

--- a/styleblog.css
+++ b/styleblog.css
@@ -1,285 +1,95 @@
 @import url("styles/card.css");
+@import url("styles/form.css");
+@import url("styles/body.css");
+@import url("styles/header.css");
+@import url("styles/nav.css");
 
 * {
-    box-sizing: border-box;
-    }
+  box-sizing: border-box;
+}
 
+@media only screen and (max-width: 840px) {
+  .open-button {
+    position: static;
+  }
+}
 
-    .open-button {
-        background-color: #1565C0;
-        color: black;
-        padding: 16px 20px;
-        border: none;
-        cursor: pointer;
-        position: fixed;
-        top: 61px;
-        right: 28px;
-        width: 150px;
-        font-size: 110%;
-        font-weight: 200;
-      }
-      
-      @media only screen and (max-width: 840px) {
-        .open-button {
-           position: static;
-        }
-            }
-      
-      
-      /* The popup form - hidden by default */
-      .form-popup {
-        display: none;
-        position: fixed;
-        top: 60;
-        right: 28px;
-        border: 3px solid black;
-        z-index: 9;
-      }
-      
-      /* Add styles to the form container */
-      .form-container {
-        max-width: 300px;
-        padding: 10px;
-        background-color: #1565C0;
-      }
-      
-      /* Full-width input fields */
-      .form-container input[type=text], .form-container input[type=password] {
-        width: 100%;
-        padding: 15px;
-        margin: 5px 0 22px 0;
-        border: none;
-        background: #f1f1f1;
-      }
-      
-      /* When the inputs get focus, do something */
-      .form-container input[type=text]:focus, .form-container input[type=password]:focus {
-        background-color: #ddd;
-        outline: none;
-      }
-      
-      /* Set a style for the submit/login button */
-      .form-container .btn {
-        background-color: #04AA6D;
-        color: white;
-        padding: 16px 20px;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        margin-bottom:10px;
-        opacity: 0.8;
-      }
-      
-      /* Add a red background color to the cancel button */
-      .form-container .cancel {
-        background-color: red;
-      }
-      
-      /* Add some hover effects to buttons */
-      .form-container .btn:hover, .open-button:hover {
-        opacity: 1;
-      }
+body {
+  grid-template-areas:
+    "header header header header header header header"
+    "main main main main main main aside"
+    "footer footer footer footer footer footer footer";
+}
 
-      
-    body {
-        background-color: #90CAF9;      
-        margin: 0;
-        height: 100vh;
-        width: 100vw;
-        overflow-x: hidden;
-        
-          display: grid;
-          width: 100vw;
-          height: 100vh;
-          padding: 0;
-          gap: 0;
-          grid-auto-rows: auto 1fr;
-          grid-template-areas:
-              "header header header header header header header"
-               "main main main main main main aside"
-              "footer footer footer footer footer footer footer";
-        
-      }
+main {
+  grid-area: main;
+  background-color: #1565c0;
+  justify-content: center;
+  padding: 25px;
+  border: 2px solid black;
+}
 
+aside {
+  align-self: center;
+  grid-area: aside;
+  background-color: #1565c0;
+  padding: 20px;
+  border: 2px solid black;
+}
 
-      header {
-		grid-area: header;
-        display: grid;
-        grid-template-areas: 
-        "top top"
-        "bottom bottom"
-	}
+footer {
+  grid-area: footer;
+  margin: 10px;
+}
 
+.photos-container {
+  border: 1px solid black;
+}
 
-    .box1 {
-        grid-area: top;
-        text-align: center;
-        
-    }
-
-
-    .box2 {
-        grid-area: bottom;
-        text-align: center;
-        text-decoration: underline;
-    }
-
-
-     .nav {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #1565C0;
-        position: relative;
-        top: 0;
-        width: 100%;
-      }
-      
-
-      li {
-        float: left;
-      }
-      
-
-      li a {
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-      
-
-      li a:hover:not(.active) {
-        background-color: #111;
-      }
-      
-
-      .active {
-        background-color: #04AA6D;
-      }
-
-
-	main {
-		align-self: center;
-            
-             
-		grid-area: main;
-   
-        background-color: #1565C0;
-        
-    display: grid;
-    padding: 20px;
-   
-    border: 2px solid black;
-    justify-content: center;
-    grid-gap: 15px;
-    }
-
-
-    aside {
-		align-self: center;
-		grid-area: aside;
-        background-color: #1565C0;
-        padding: 20px;
-        border: 2px solid black;
-	}
-
-
-	footer {
-		grid-area: footer;
-	}
-    
-   
-    .photos-container {
-    	border: 1px solid black;
-    	/*flex-grow: 1;
-        min-height: 100px;
-        	width: 50%;
-            */
-    }
-
-
-    p {   	
-    	/*flex-grow: 1;
+p {
+  /*flex-grow: 1;
         width: 50%;
         min-height: 100px;
         */
-        max-width: 100%; 
-        max-height: 100px; 
-        overflow: auto;        	
-    }
-    
+  max-width: 100%;
+  max-height: 100px;
+  overflow: auto;
+}
 
-    .avatar {
-    width: 100px;
-    height: 100px;
-    background-image: url(Images/me1.jpg);
-    background-size: cover;
-    border-radius: 25%;
-    }
-    
-    
-    @media only screen and (max-width: 1200px) {
-      body {
-      grid-auto-rows: minmax(min-content, auto);
-        	grid-template-areas:
-		'header'
-		'main'
-        'main'
-         'main'
-		'aside'
-		'aside'
-		'footer';
-      }
-      
-      	main {
-        	padding: 10px;
-		}
-    }
-    
+.avatar {
+  width: 100px;
+  height: 100px;
+  background-image: url(Images/me1.jpg);
+  background-size: cover;
+  border-radius: 25%;
+}
 
-     @media only screen and (max-width: 480px) {
-     
-     main {
-	padding: 10px;
-  
+@media only screen and (max-width: 1200px) {
+  body {
+    grid-auto-rows: minmax(min-content, auto);
+    grid-template-areas:
+      "header"
+      "main"
+      "main"
+      "main"
+      "aside"
+      "aside"
+      "footer";
+  }
+
+  main {
+    padding: 15px;
+  }
+
+
+@media only screen and (max-width: 480px) {
+  main {
+    padding: 10px;
+
     grid-gap: 10px;
-	}
-    }
-   
+  }
+}
 
-  
-
-    .h1card1 {
-        margin: 0%;
-    }
-/* div.gallery {
-        border: 1px solid #ccc;
-      }
-      
-      div.gallery:hover {
-        border: 1px solid #777;
-      }
-      
-      div.gallery img {
-        width: 100%;
-        height: auto;
-      }
-
-
-      div.desc {
-        padding: 10px;
-        text-align: center;
-      }
-      
-      * {
-        box-sizing: border-box;
-      }
-      
-      .responsive {
-        padding: 0 6px;
-        float: left;
-        width: 24.99999%;
-      } */
+.h1card1 {
+  margin: 0%;
+}
