--- a/src/css/pages/blog.css
+++ b/src/css/pages/blog.css
@@ -1,12 +1,12 @@
-@import url("styles/card.css");
-@import url("styles/form.css");
-@import url("styles/body.css");
-@import url("styles/header.css");
-@import url("styles/nav.css");
-@import url("styles/main.css");
-@import url("styles/photos.css");
-@import url("styles/footer.css");
-@import url("styles/universal.css");
+@import url("../styles/card.css");
+@import url("../styles/form.css");
+@import url("../styles/body.css");
+@import url("../styles/header.css");
+@import url("../styles/nav.css");
+@import url("../styles/main.css");
+@import url("../styles/photos.css");
+@import url("../styles/footer.css");
+@import url("../styles/universal.css");
 
 
 @media only screen and (max-width: 1005px) {
@@ -17,6 +17,9 @@
 }
 
 body {
+  display: grid;
+  gap: 0;
+  grid-auto-rows: auto 1fr;
   grid-template-areas:
     "header header header header header header header"
     "main main main main main main aside"
@@ -29,28 +32,16 @@ body {
 
 
 aside {
-  align-self: center;
   grid-area: aside;
   background-color: #1565c0;
   padding: 20px;
-  border: 2px solid black;
 }
 
-
-p {
-  /*flex-grow: 1;
-        width: 50%;
-        min-height: 100px;
-        */
-  max-width: 100%;
-  max-height: 100px;
-  overflow: auto;
-}
 
 .avatar {
-  width: 100px;
-  height: 100px;
-  background-image: url(Images/me1.jpg);
+  width: 140px;
+  height: 140px;
+  background-image: url(../../images/me1.jpg);
   background-size: cover;
   border-radius: 25%;
 }
