feat: implemented corrections/improvements according to feedback
- added one more block quote (had already used one)
- added directory
- various typography were already being used but I added a couple
- links used
- pages are mobile-friendly

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,7 +6,7 @@
 @import url("styles/main.css");
 @import url("styles/photos.css");
 @import url("styles/footer.css");
-@import url("styles/universal.css");
+@import url("utilities/universal.css");
 
 body {
   display: grid;
