--- a/src/css/pages/blog.css
+++ b/src/css/pages/blog.css
@@ -6,7 +6,7 @@
 @import url("../styles/main.css");
 @import url("../styles/photos.css");
 @import url("../styles/footer.css");
-@import url("../styles/universal.css");
+@import url("../utilities/universal.css");
 
 
 @media only screen and (max-width: 1005px) {
@@ -34,7 +34,7 @@ body {
 aside {
   grid-area: aside;
   background-color: #1565c0;
-  padding: 20px;
+  padding: 25px;
 }
 
 
