--- a/src/css/utilities/universal.css
+++ b/src/css/utilities/universal.css
@@ -2,3 +2,24 @@
   box-sizing: border-box;
   font-family: "Courier New", Courier, monospace;
 }
+
+h1 {
+  text-decoration: underline;
+}
+
+h2 {
+  text-decoration: underline;
+}
+
+blockquote {
+  text-decoration: underline;
+}
+
+a {
+  text-transform: capitalize;
+}
+
+figcaption {
+  font-style: italic;
+  text-decoration: underline;
+}
